--- a/Homework(02_03_20)/Homework(02_03_20).vcxproj.filters
+++ b/Homework(02_03_20)/Homework(02_03_20).vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Sorting.cpp">
+    <ClCompile Include="Source.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
